# actian-vector-ai-hackathon

./: CLAUDE.md  CONTRIBUTION.md  README.md  SPEC.md  specification.md
.github/workflows/: docs-contract.yml
agent-docs/: todo.md
demo-test-app/: AGENTS.md  README.md  package-lock.json  package.json
demo-test-app/scripts/: crawl_svelte_docs.py
docs/: arch-prompt.md  codex-assisted-build-rag-mcp-system-3-days.md  docs-index.md
docs/agent-docs/: todo.md
docs/designs/: agentic-repo-standardization-v1.md
docs/steps/: dcli-global-codex-integration.md  frontend-ai-generation-prompt.md  phase-two-testing-runbook.md  phase-two-todo.md
documind/backend/: .gitignore  IMPLEMENTATION_TEST_GUIDE.md  README.md  documind_cli.py  pyproject.toml  requirements.txt  run_documind_cli.sh  run_mcp_server.sh
documind/backend/app/: config.py  database.py  embeddings.py  main.py  routing.py  runtime.py  vectordb.py
documind/backend/app/models/: schemas.py
documind/backend/app/routers/: __init__.py  instances.py  knowledge_bases.py  memory.py  observability.py  query.py  resources.py
documind/backend/app/services/: agent.py  ingestion.py  observability.py  retrieval.py
documind/backend/mcp_server/: __init__.py  client.py  config.py  context_store.py  server.py  service.py
documind/backend/postman/: collection-v1.json  collection-v2.json
documind/backend/tests/: test_advanced_schemas.py  test_context_store.py  test_documind_cli.py  test_mcp_search_tool.py  test_mcp_server_guards.py  test_query_router.py  test_resources_router.py  test_routing.py  test_vectordb.py
(+125 files in other folders)
