[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "documind-cli"
version = "0.1.0"
description = "DocuMind CLI for context-aware document search and query"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1",
]

[project.scripts]
dcli = "documind_cli:run_cli"
documind = "documind_cli:run_cli"
DCLI = "documind_cli:run_cli"

[tool.setuptools]
py-modules = ["documind_cli"]
packages = ["mcp_server"]
